Fixing Margin Issue on Mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -23,6 +23,10 @@
     margin: auto 0;    
 }
 
+#stats-group{
+    margin-top: 150px;
+}
+
 #name{
     display: block;
     margin: 20px auto;
@@ -95,13 +99,7 @@ button:hover, #submitButton:hover {
 }
 
 footer{
-    position: absolute;
-    bottom: 1%;
-    right:  17%;
-    text-align: center;
-    font-weight: 500;
-    font-size: 13px;
-
+    display: none;
 }
 
 a {
@@ -242,10 +240,6 @@ input {
 
 @media screen and (max-width:375px){
 
-    .main-container{
-        /* display: block; */
-        margin: 150px 0;
-    }
 
     .image{
         width: 100%;
@@ -254,8 +248,12 @@ input {
     }
     .stats{
         width: 100%;
-        margin-top: 100px ;
+        /* margin-top: 100px !important; */
     }
+    .middle{
+        margin-top: 100px;
+    }
+
     .title{
         width: 75%;
         margin: 0 20px 0 0 ;
@@ -280,9 +278,12 @@ input {
     }
 
     footer{
-        position: static;
-        /* text-align: center!important; */
-        margin-top: 120px;
+        position: fixed;
+        display: none;
+        bottom:2%;
+        text-align: center;
+        font-weight: 500;
+        font-size: 13px;
     }
     table, td, tr{
         border: 1px solid black;
